<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo"
        android:layout_marginTop="70sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/textOfAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHeadingAuth"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/phnMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLowAuth"
        android:layout_below="@+id/textOfAuth"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30sp"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        />

    <com.chaos.view.PinView
        android:id="@+id/PinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phnMessage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30sp"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemWidth="48dp"
        app:lineWidth="2dp"
        app:viewType="rectangle"/>


    <TextView
        android:id="@+id/timeCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PinView"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30sp"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        />
    <Button
        android:id="@+id/VerifyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOfAuth"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        />
</RelativeLayout>