<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".oneTimePurchase">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp"
        android:background="@drawable/shapebar">
        <RelativeLayout
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_marginTop="5sp"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/header_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="কৃষক"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="বন্ধু"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head">
        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="15sp"
            android:text="@string/payment3"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_name_payment"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:text="Product Name"></TextView>
        <TextView
            android:id="@+id/product_time_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Time"
            android:layout_below="@+id/first"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20sp"
            android:textColor="@color/green"
            android:layout_marginRight="20sp"
            >
        </TextView>
        <TextView
            android:id="@+id/product_value_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Money"
            android:layout_below="@+id/product_time_payment"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:layout_marginRight="20sp"
            >
        </TextView>
        <TextView
            android:id="@+id/product_quantity_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment1"
            android:layout_below="@+id/product_value_payment"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            >
        </TextView>
        <EditText
            android:id="@+id/amountOfProduct"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            android:inputType="number"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_below="@+id/product_quantity_payment"
            />
        <TextView
            android:id="@+id/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment2"
            android:layout_below="@+id/amountOfProduct"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            >
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paymentProcess"
            android:layout_below="@+id/p2"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/nagad"
                android:src="@drawable/nagad"
                android:layout_marginLeft="20sp"
                />
            <ImageView
                android:id="@+id/nagadTik"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tik"
                android:visibility="gone"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_toRightOf="@+id/nagad"
                android:id="@+id/bkash"
                android:src="@drawable/bkash"
                android:layout_marginLeft="40sp"
                />
            <ImageView
                android:id="@+id/bkashTik"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tik"
                android:layout_marginLeft="120sp"
                android:visibility="gone"
                android:layout_toRightOf="@+id/nagad"
                />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PaymentPhone"
            android:layout_below="@id/paymentProcess"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:visibility="gone"
            android:hint="অ্যাকাউন্ট ফোন নম্বর দিন"
            android:inputType="number"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PaymentPhonePin"
            android:layout_below="@id/PaymentPhone"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:hint="গোপন পিন দিন"
            android:inputType="numberPassword"
            android:visibility="gone"
            android:maxLines="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_buy"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="@string/payment4"
            android:visibility="gone"
            android:backgroundTint="@color/green"
            android:layout_below="@+id/PaymentPhonePin" />
    </RelativeLayout>

</RelativeLayout>